<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
        android:id="@+id/Titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/consulta_curp"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Ingresa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/Titulo"
        android:text="@string/ingresa"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/Nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="117dp"
        android:text="@string/nombre"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/PrimerApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="176dp"
        android:text="@string/pApellido" />

    <TextView
        android:id="@+id/SegundoApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/inputSegundoApellido"
        android:text="@string/sApellido" />

    <TextView
        android:id="@+id/Genero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/grupoGenero"
        android:text="@string/genero" />

    <TextView
        android:id="@+id/Fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="214dp"
        android:text="@string/fecha_nacimiento" />

    <TextView
        android:id="@+id/Lugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="78dp"
        android:text="@string/estado" />

        <EditText
            android:id="@+id/inputNombre"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/Nombre"
            android:inputType="text"
            android:textSize="15sp"
            android:hint="@string/nombre"/>

    <EditText
        android:id="@+id/inputPrimerApellido"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/PrimerApellido"
        android:hint="@string/pApellido"
        android:inputType="text"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/inputSegundoApellido"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="246dp"
        android:hint="@string/sApellido"
        android:inputType="text"
        android:textSize="15sp" />


        <EditText
            android:id="@+id/inputFecha"
            android:layout_width="143dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/Fecha"
            android:focusable="false"
            android:inputType="date"
            android:textSize="15sp"
            tools:ignore="LabelFor" />


        <Button
            android:id="@+id/bFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/Fecha"
            android:layout_centerHorizontal="true"
            android:onClick="mostrarCalendario"
            android:text="@string/bFecha" />

        <Spinner
            android:id="@+id/spEstado"
            android:layout_width="253dp"
            android:layout_height="41dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/Lugar"/>

        <Button
            android:id="@+id/botonSiguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="infoUsuario"
            android:text="@string/botonSiguiente" />

        <Button
            android:id="@+id/botonFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="infoUsuario"
            android:text="@string/botonSiguiente" />


    <RadioGroup
        android:id="@+id/grupoGenero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/inputNombre"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/inputNombre">

        <RadioButton
            android:id="@+id/radioButtonMujer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generoFemenino" />

        <RadioButton
            android:id="@+id/radioButtonHombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="119dp"
            android:text="@string/generoMasculino" />
    </RadioGroup>


</RelativeLayout>

