<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/outputGenero"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/Genero"
        android:hint="@string/genero"
        android:textSize="15sp"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/Titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="12dp"
        android:gravity="top"
        android:text="@string/resultadoCURP"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Ingresa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"

        android:layout_alignParentTop="true"
        android:layout_marginTop="89dp"
        android:text="@string/resultadoConsulta"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/Nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="155dp"
        android:text="@string/nombre"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/outputNombre"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/Nombre"
        android:textSize="15sp"
        android:hint="@string/nombre"/>

    <TextView
        android:id="@+id/PrimerApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="199dp"
        android:text="@string/pApellido" />

    <TextView
        android:id="@+id/SegundoApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="263dp"
        android:text="@string/sApellido" />

    <TextView
        android:id="@+id/outputPrimerApellido"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/PrimerApellido"
        android:hint="@string/pApellido"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/outputSegundoApellido"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/SegundoApellido"
        android:layout_marginBottom="246dp"
        android:hint="@string/sApellido"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/outputEstado"
        android:layout_width="200dp"
        android:layout_height="33dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/Lugar"
        android:hint="@string/estado"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/outpuFecha"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/Fecha"
        android:hint="@string/bFecha"
        android:textSize="15sp"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/Genero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="191dp"
        android:text="@string/genero" />

    <TextView
        android:id="@+id/Fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="226dp"
        android:text="@string/fecha_nacimiento" />

    <TextView
        android:id="@+id/Lugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="151dp"
        android:text="@string/estado" />

    <Button
        android:id="@+id/generarCurp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/generarCurp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fotoUsuario"/>

</RelativeLayout>

